--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "karma": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "selenium-standalone": "^5.5.0"
-  }
+  },
+  "files": [
+    "index.js"
+  ]
 }
